# RimlightToolkit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
adapters/aftereffects/: CMakeLists.txt  RimlightAE.cpp  RimlightAE_PiPL.r
adapters/ofx/: CMakeLists.txt  RimlightOFX.cpp
apps/preview_cli/: CMakeLists.txt  main.cpp
apps/preview_gui/: CMakeLists.txt  main_win32.cpp
cmake/: AfterEffectsSDK.cmake  LodePNG.cmake  OpenFXSDK.cmake
docs/: architecture.md  sdk-notes.md
include/rtk/core/: Image.hpp  Parameters.hpp  Renderer.hpp
scripts/: preview.cmd  rtk.ps1  rtk.sh
src/core/: CMakeLists.txt  Renderer.cpp
tests/: CMakeLists.txt  core_renderer_tests.cpp
